<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_chat_info"
            android:icon="@drawable/ic_info"
            android:title="@string/chat_info"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_clear_history"
            android:title="@string/clear_history"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_mute"
            android:title="@string/mute_notifications"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_block_user"
            android:title="@string/block_user"
            app:showAsAction="never" />

</menu>